web/graph/global.css
/* ... */
li.pending a, li.pendingg a { background-image: url("../img/actions/pending.svg"); }
li.history a, li.historyg a { background-image: url("../img/actions/history.svg"); }
li.manageusers a, li.manageusersg a { background-image: url("../img/actions/usergroup.svg"); }
li.edit a, li.editg a { background-image: url("../img/actions/edit.svg"); }
li.delete a, li.deleteg a { background-image: url("../img/actions/delete.svg"); }
li.download a, li.downloadg a { background-image: url("../img/actions/download.svg"); }
li.add a { background-image: url("../img/actions/add.svg"); }
li.remove a { background-image: url("../img/actions/remove.svg"); }
li.audit a { background-image: url("../img/actions/details.svg"); }
li.auditbymachine a { background-image: url("../img/actions/auditbymachine.svg"); }
li.auditbyupdate a { background-image: url("../img/actions/auditbyupdate.svg"); }
li.backup a { background-image: url("../img/actions/backup.svg"); }
li.banupdate a { background-image: url("../img/actions/banupdate.svg"); }
li.convergence a { background-image: url("../img/actions/convergence.svg"); }
li.convergenceunin a { background-image: url("../img/actions/convergenceunin.svg"); }
li.csv a { background-image: url("../img/actions/csvexport.svg"); }
li.advanced a { background-image: url("../img/actions/confitem.svg"); }
li.addbootmenu a { background-image: url("../img/actions/addfile.svg"); }
li.delbootmenu a { background-image: url("../img/actions/delfile.svg"); }
li.removebootmenu a { background-image: url("../img/actions/delete.svg"); }
li.showbootmenu a { background-image: url("../img/actions/show.svg"); }
li.createbootservice a { background-image: url("../img/actions/transformfile.svg"); }
li.duplicatemaster a { background-image: url("../img/actions/duplicate.svg"); }
li.duplicatescript a { background-image: url("../img/actions/duplicate.svg"); }
li.editacl a { background-image: url("../img/actions/key.svg"); }
li.groupshare a { background-image: url("../img/actions/share.svg"); }
li.showtarget a { background-image: url("../img/actions/info.svg"); }
li.approveupdate a { background-image: url("../img/actions/deploy.svg"); }
li.start a { background-image: url("../img/actions/play.svg"); }
li.restart a { background-image: url("../img/actions/restart.svg"); }
li.unlist a { background-image: url("../img/actions/unlist.svg"); }
li.up a { background-image: url("../img/actions/up.svg"); }
li.down a { background-image: url("../img/actions/down.svg"); }
li.ok a { background-image: url("../img/other/yes.svg"); }
li.info a { background-image: url("../img/common/info.png"); }
li.load a { background-image: url("../img/common/loader_p.gif"); }
li.wait a { background-image: url("../img/common/todo.png"); }
li.empty a { background-image: url("../img/common/spacer.gif"); }

.user_container {
  padding-top: 40px;
}

#container .action {
  line-height: 18px;
}
/* ---------------------------------------- */
/* Tables                                  */
/* ---------------------------------------- */

#section table {
  width: 100%;
}

#section table.listinfos {
  border: none;
  margin: 15px 30px 15px 0px;
  border-radius: 9px;
  overflow: hidden;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
  border: 1px solid #e2e8f0;
}

#section table.listinfos thead tr {
  background: var(--color-primary) !important;
}

#section table.listinfos tr.alternate {
  background: var(--color-bg-white) !important;
  transition: background-color 0.15s ease;
}

#section table.listinfos tr.alternate:nth-child(odd) {
  background: #e8eff3 !important;
}

#section table.listinfos tr.alternate:hover {
  background-color: #d0e4ed !important;
}

#section table.listinfos tbody tr.alternate {
  background-color: #f4f7f9 !important;
}

#section table.membersTpl {
  width: auto;
}

#section table.membersTpl td {
  border: none;
  padding-left: 0px;
}

td,
th {
  padding: 10px 25px 10px 10px;
  border-color: var(--color-border-medium);
  border-width: 1px 0 0 0;
  border-style: solid;
  vertical-align: center;
}

td.printerName,
td.shareName,
td.groupName,
td.noMachineName,
td.machineName,
td.machineNamepresente,
td.machinePull,
td.userName {
  color: var(--color-text-medium);
  font-weight: bold;
  background-repeat: no-repeat;
}

td a,
td.noMachineName a,
td.machineName a,
td.machineNamepresente a,
td.machinePull a,
td.userName a {
  color: var(--color-text-medium);
  font-weight: bold;
  text-decoration: none;
}
td a:link,
td.noMachineName a:link,
td.machineName a:link,
td.machineNamepresente a:link,
td.machinePull a:link,
td.userName a:link {
  color: var(--color-text-medium);
  font-weight: bold;
  text-decoration: none;
}
td a:visited,
td.noMachineName a:visited,
td.machineName a:visited,
td.machineNamepresente a:visited,
td.machinePull a:visited,
td.userName a:visited {
  color: var(--color-text-medium);
  font-weight: bold;
  text-decoration: none;
}

td.userNameDisabled {
  color: var(--color-text-muted);
  font-weight: bold;
  background-repeat: no-repeat;
}

td.userNameDisabled a {
  color: var(--color-text-muted);
  font-weight: bold;
  text-decoration: none;
}
td.userNameDisabled a:link {
  color: var(--color-text-muted);
  font-weight: bold;
  text-decoration: none;
}
td.userNameDisabled a:visited {
  color: var(--color-text-muted);
  font-weight: bold;
  text-decoration: none;
}

td.groupName a {
  color: var(--color-text-medium);
  font-weight: bold;
  text-decoration: none;
}
td.groupName a:link {
  color: var(--color-text-medium);
  font-weight: bold;
  text-decoration: none;
}
td.groupName a:visited {
  color: var(--color-text-medium);
  font-weight: bold;
  text-decoration: none;
}

td.printerName {
  padding: 0 0 0 34px;
  background-image: url("../img/printers/icn_printersList.gif");
  background-position: 7px 8px;
}

td.printerAction {
  text-align: right;
}

td.shareName {
  padding: 0 0 0 34px;
  background-image: url("../img/shares/icn_shareList.gif");
  background-position: 7px 7px;
}

td.shareAction {
  text-align: right;
}
/* ... */

